--- a/CompassSite/Views/Home/Index.cshtml
+++ b/CompassSite/Views/Home/Index.cshtml
@@ -1,8 +1,68 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+   ViewData["Title"] = "СЦ \"Компас\"";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+   <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+   </ol>
+   <div class="carousel-inner">
+      <div class="carousel-item active slide1">
+         <div class="carousel-caption">
+            <h1>Ремонт компьютеров</h1>
+            <p>Диагностика, ремонт и модернизация с выездом мастера или в сервисном центре.</p>
+         </div>
+      </div>
+      <div class="carousel-item slide2">
+         <div class="carousel-caption">
+            <h1>Обслуживание оргтехники</h1>
+            <p>Ремонт принтеров, заправка картриджей с выездом мастера или в сервисном центре.</p>
+         </div>
+      </div>
+      <div class="carousel-item slide3">
+         <div class="carousel-caption">
+            <h1>Продажа компьютерной продукции</h1>
+            <p>Продажа клавиатур, мышек, веб-камер, различных кабелей и другого переферийного оборудования.</p>
+         </div>
+      </div>
+   </div>
+   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Предыдущий</span>
+   </a>
+   <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Следующий</span>
+   </a>
 </div>
+<div class="pt-2 pb-2 mb-2 mt-5 mb-5 text-white bg-dark">
+   <h1 class="text-center">Описание</h1>
+</div>
+<div class="container ">
+   <div class="p-5 border text-size-20 ">
+      <p class=" ">
+         Сервисный центр <span class="compass-font-black">"Компас"</span> занимается выявлением всех неисправностей и нахождением причин их появления, составление перечня необходимых восстановительных работ и запасных частей, оценку стоимости ремонта.
+      </p>
+      <p>
+         <span class="compass-font-black">"Компас"</span> осуществляет ремонт персональных компьютеров, ноутбуков, любой сложности и марки производителя. Профессиональный подход к выполнению каждой задачи, широкий спектр предлагаемых услуг, низкая ценовая политика и быстрое обслуживание.
+      </p>
+      <p>
+         Так же мы предлагаем большой ассортимент компьютерной продукции: переферийные устройства, компакт диски, кабели и многое другое, необходимое для компьютера.
+      </p>
+
+      
+
+   </div>
+</div>
+<div class="pt-2 pb-2 mb-2 mt-5 mb-5 text-white bg-dark">
+   <h1 class="text-center">Мы рядом</h1>
+</div>
+<div class="container">
+   <div class="text-center border mt-5">
+      <div class="d-flex justify-content-center">
+         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa6b13c92853923151bdd8d6fa0b9063e07f3c9d0ceac876f442634a087db9a63&amp;width=1100&amp;height=398&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div>
+   </div>
+</div>
+
