--- a/CompassSite/wwwroot/css/site.css
+++ b/CompassSite/wwwroot/css/site.css
@@ -1,71 +1,95 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿* {
+    box-sizing: border-box;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+
+p {
+    overflow: hidden;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+header {
+    width: 100%;
+    box-shadow: 1px 2px 3px -1px #FFFF55;
+    margin: 0;
+    padding: 0;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.inner-background {
+    background: white;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+header img {
+    width: 0 auto;
+    height: 200px;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
+.brand {
+    font-size: 60px;
 }
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.border {
+    border-radius: 15px;
+    border-width: 2px !important;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+.main-image {
+    width: 0 auto;
+    height: 50vh;
+}
+.clear-list {
+    list-style: none;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+.nav-link {
+    font-weight: bold;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    .nav-link:hover {
+        color: #FFFF55 !important;
+        text-decoration: underline;
+    }
+
+.carousel-item {
+    max-height: 100vh;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+    .carousel-item img {
+        filter: brightness(50%)
+    }
+
+.carousel-caption {
+    top: 50%;
+    transform: translateY(-50%);
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+    .carousel-caption h1 {
+        font-size: 55px;
+        font-weight: bold;
+    }
+.slide1 {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    background-image: url("/images/slide1.jpg");
+    color: white;
+}
+.slide2 {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    background-image: url("/images/slide2.jpg");
+    color: white;
+}
+.slide3 {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    background-image: url("/images/slide3.jpg");
+    color: white;
+}
+.compass-image {
+    border-radius: 10px;
 }
