Removed "Каталог товаро"

--- a/CompassSite/Views/Shared/_Layout.cshtml
+++ b/CompassSite/Views/Shared/_Layout.cshtml
@@ -55,9 +55,9 @@
             <li class="nav-item ml-2">
                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Services">УСЛУГИ</a>
             </li>
-            <li class="nav-item ml-2">
+            @*<li class="nav-item ml-2">
                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Products">КАТАЛОГ ТОВАРОВ</a>
-            </li>
+            </li>*@
          </ul>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toogleContent" aria-controls="toogleContent" aria-expanded="false" aria-label="Toggle navigation">
