--- a/CompassSite/Views/Home/Index.cshtml
+++ b/CompassSite/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
 <div class="container ">
    <div class="p-5 border text-size-20 ">
       <p class=" ">
-         Сервисный центр <span class="compass-font-black">"Компас"</span> занимается выявлением всех неисправностей и нахождением причин их появления, составление перечня необходимых восстановительных работ и запасных частей, оценку стоимости ремонта.
+         Сервисный центр "Компас" занимается выявлением всех неисправностей и нахождением причин их появления, составление перечня необходимых восстановительных работ и запасных частей, оценку стоимости ремонта.
       </p>
       <p>
          <span class="compass-font-black">"Компас"</span> осуществляет ремонт персональных компьютеров, ноутбуков, любой сложности и марки производителя. Профессиональный подход к выполнению каждой задачи, широкий спектр предлагаемых услуг, низкая ценовая политика и быстрое обслуживание.
