--- a/CompassSite/Views/Home/Services.cshtml
+++ b/CompassSite/Views/Home/Services.cshtml
@@ -2,7 +2,7 @@
    <h1 class="text-center mt-4">Наши услуги</h1>
    <div class="d-flex justify-content-around">
       <div class="">
-         <div class="container row d-flex flex-wrap text-center justify-content-between">
+         <div class="container row d-flex flex-wrap text-center justify-content-around">
             <div class="card w-20 max-w-20 m-2 col-md-4 col-lg-4 col-sm-12">
                <img src="@Url.Content("~/images/repair_pc.png")" class="card-img-top w-10 m-auto">
                <div class="card-body">
