--- a/CompassSite/Views/Shared/_Layout.cshtml
+++ b/CompassSite/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
       <div class="d-flex flex-column col-sm-12 col-md-4 col-lg-4 align-content-center justify-content-center text-center text-md-left text-lg-left">
          <div class="">
             <span class="compass-shadow brand ">СЦ - Компас</span>
-            <h5 class="text-size-20 overflow-hidden p-0">Профессиональный и качественный сервис</h5>
+            <h5 class="text-size-20 overflow-hidden p-0 font-weight-bold">Профессиональный и качественный сервис</h5>
          </div>
       </div>
       <div class="col-sm-12 col-md-4 col-lg text-center">
@@ -30,9 +30,9 @@
                <h2 class="compass-shadow col-12 col-md-12 col-lg-12 ">Свяжитесь с нами:</h2>
             </div>
             <div class="">
-               <ul class="list-unstyled align-items-center col-12 col-md-12 col-lg-12">
-                  <li><span>Телефон: 8(800) 111-222-333</span></li>
-                  <li><span>Email: compass@gmail.com</span></li>
+               <ul class="list-unstyled align-items-center col-12 col-md-12 col-lg-12 ">
+                  <li class="">Телефон: 8(800) 111-222-333</li>
+                  <li class="">Email: compass@gmail.com</li>
                </ul>
             </div>
          </div>
