--- a/CompassSite/wwwroot/css/site.css
+++ b/CompassSite/wwwroot/css/site.css
@@ -61,13 +61,13 @@ header img {
     top: 50%;
     transform: translateY(-50%);
     color: white;
-    font-size: 25px;
     font-weight: bold;
+    text-shadow: -2px 0 #000000, 0 2px #000000, 2px 0 #000000, 0 -2px #000000;
 }
 
     .carousel-caption h1 {
-        font-size: 55px;
         font-weight: bold;
+        
     }
 .slide1 {
     height: 100vh;
