--- a/CompassSite/wwwroot/css/text.css
+++ b/CompassSite/wwwroot/css/text.css
@@ -10,3 +10,71 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
+
+@media (min-width: 576px) {
+    .carouser-caption h1 {
+        font-size: 1.25rem !important;
+        color: red;
+    }
+    .carouser-caption p {
+        font-size: 1.25rem !important;
+        color: red;
+    }
+}
+
+@media (max-width: 768px) {
+    .carouser-caption h1 {
+        font-size: 1.75rem !important;
+        color: red;
+    }
+
+    .carouser-caption p {
+        font-size: 1.75rem !important;
+    }
+}
+
+@media (max-width: 992px) {
+    .carouser-caption h1 {
+        font-size: 2rem !important;
+    }
+
+    .carouser-caption p {
+        font-size: 2rem !important;
+    }
+}
+
+@media (max-width: 1200px) {
+    .carouser-caption h1 {
+        font-size: 2.5rem !important;
+    }
+
+    .carouser-caption p {
+        font-size: 2.5rem !important;
+    }
+}
+
+
+/*
+h1, .h1 {
+    font-size: 2.5rem;
+}
+
+h2, .h2 {
+    font-size: 2rem;
+}
+
+h3, .h3 {
+    font-size: 1.75rem;
+}
+
+h4, .h4 {
+    font-size: 1.5rem;
+}
+
+h5, .h5 {
+    font-size: 1.25rem;
+}
+
+h6, .h6 {
+    font-size: 1rem;
+}*/
