--- a/CompassSite/Views/Home/Contacts.cshtml
+++ b/CompassSite/Views/Home/Contacts.cshtml
@@ -5,7 +5,7 @@
          <h1>Контакты</h1>
          <div class="">
             <img src="@Url.Content("~/images/compass_logo.png")" class="max-w-5"/>
-            <span class="translucent">Сервисный центр ООО "Компас"</span>
+            <span class="translucent">Сервисный центр "Компас"</span>
          </div>
          <p>Наш сервисный центр находится по следующему адресу:</p>
          <span>Ставропольский край, ст. Ессентукская, улица Гагарина 112а</span>
@@ -28,13 +28,13 @@
       </div>
 
    </div>
-   <div class="p-4 container font-weight-bold">
-      <p>
-         <span>Телефон</span> - 8(800) 111-222-333<br />
-         <span>Электронный адрес</span> - compass@gmail.com<br />
-         <span>Веб-сайт</span> - compass.herokuapp.com<br />
-      </p>
-
+   <div class="p-4 font-weight-bold">
+      <div>
+         <span>Телефон: 8 (905) 419-73-34</span> <br />
+         <span class="ml-5 pl-4"><span class="space"></span>8 (87961) 5-12-17</span><br />
+      </div>
+      <span>Электронный адрес: kompasservice@yandex.ru</span> <br />
+      <span>Веб-сайт: compass-service.herokuapp.com</span> <br />
    </div>
 </div>
 <div class="container border mb-3 p-4 mt-4">
