--- a/CompassSite/Views/Home/Index.cshtml
+++ b/CompassSite/Views/Home/Index.cshtml
@@ -42,13 +42,13 @@
 <div class="container ">
    <div class="p-5 border text-size-20 ">
       <p class=" ">
-         Сервисный центр "Компас" занимается выявлением всех неисправностей и нахождением причин их появления, составление перечня необходимых восстановительных работ и запасных частей, оценку стоимости ремонта.
+         Сервисный центр "Компас" занимается диагностикой неисправностей компьютерной и оргтехники и их устранением.
       </p>
       <p>
-         <span class="compass-font-black">"Компас"</span> осуществляет ремонт персональных компьютеров, ноутбуков, любой сложности и марки производителя. Профессиональный подход к выполнению каждой задачи, широкий спектр предлагаемых услуг, низкая ценовая политика и быстрое обслуживание.
+         СЦ "Компас" осуществляет ремонт персональных компьютеров, ноутбуков, любой сложности и марки производителя. Профессиональный подход к выполнению каждой задачи, широкий спектр предлагаемых услуг, низкая ценовая политика и быстрое обслуживание.
       </p>
       <p>
-         Так же мы предлагаем большой ассортимент компьютерной продукции: переферийные устройства, компакт диски, кабели и многое другое, необходимое для компьютера.
+         Также мы предлагаем большой ассортимент компьютерной продукции: периферийные устройства, компакт диски, кабели и многое другое, необходимое для компьютера.
       </p>
    </div>
 </div>
