--- a/CompassSite/Views/Home/Services.cshtml
+++ b/CompassSite/Views/Home/Services.cshtml
@@ -24,7 +24,7 @@
             <div class="card w-20 max-w-20 m-2 col-md-4 col-lg-4 col-sm-12">
                <img src="@Url.Content("~/images/windows_icon.png")" class="card-img-top w-10 m-auto">
                <div class="card-body">
-                  <h4 class="card-title">Установка Windows</h4>
+                  <h4 class="card-title">Установка ПО</h4>
                </div>
             </div>
             <div class="card w-20 max-w-20 m-2 col-md-4 col-lg-4 col-sm-12">
