Реализована пагинация, регистрация, авторизация, вывод товаров, вывод товаров по категориям

--- a/CompassSite/Views/Home/About.cshtml
+++ b/CompassSite/Views/Home/About.cshtml
@@ -3,8 +3,8 @@
       <h1>О компании</h1>
       <span class="translucent text-center">ООО "Компас"</span>
    </div>
-   <div class="compass-image col-sm-12 col-md-6 col-lg-6">
-      <img src="@Url.Content("/images/compas_header.jpg")" class="mw-100 compass-image" />
+   <div class="compass-border col-sm-12 col-md-6 col-lg-6">
+      <img src="@Url.Content("/images/compas_header.jpg")" class="mw-100 compass-border" />
    </div>
 </div>
 
