--- a/CompassSite/Views/Product/Products.cshtml
+++ b/CompassSite/Views/Product/Products.cshtml
@@ -2,46 +2,55 @@
 @using CompassSite.Database.Comparers
 @using CompassSite.Database.Models
 @model ProductsViewModel
-<div class="container mb-3 mt-3 p-4">
-   <div class="row">
-      <div class="categories border col-3 ">
-         <h1>Категории</h1>
-         @foreach (Category category in Model.Categories)
+<div class="container mb-3 mt-3 m-4">
+   <div class="row justify-content-center">
+      <div class="categories border col-3 pb-1">
+         <h2>Категории</h2>
+         @foreach (Category category in Model.Categories.OrderBy(t => t.Name))
          {
-            <div class="row category-item w-100 ">
-               <a asp-controller="Product" asp-action="ProductsByCategory" asp-route-categoryId="@category.Id">@category.Name</a>
-            </div>
+            @await Html.PartialAsync("Category", category);
          }
       </div>
-      <div class="products border d-flex flex-wrap col-7 justify-content-start">
+      <div class="products  col-8 m-0 p-0 ml-4 justify-content-center">
          @foreach (Product product in Model.Products)
          {
-            <div class="product row d-flex w-100">
-               <div class="">@product.ImgUrl</div>
-               <div class="">@product.Name</div>
-               <div class="d-flex">
-                  <div>Цена: @Math.Round((decimal)product.Price, 2)</div>
-                  <span>@product.Count</span>
-               </div>
-            </div>
+            @await Html.PartialAsync("Product", product);
+
          }
-         <div>
-            @for (int i = 1; i < Model.PageInfo.TotalPages+1; i++)
-            {
-               if (Model.PageInfo.CategoryId != 0)
+         <hr />
+         <div class="container">
+            <div class="row">
+               @for (int i = 1; i < Model.PageInfo.TotalPages + 1; i++)
                {
-                  <a class="btn btn-default" asp-controller="Product" asp-action="ProductsByCategory" asp-route-categoryId = "@Model.PageInfo.CategoryId" asp-route-page="@i">@i</a>
-               }
-               else
-               {
-                  <a class="btn btn-default" asp-controller="Product" asp-action="Products" asp-route-page="@i">@i</a>
+                  if (Model.PageInfo.CategoryId != 0)
+                  {
+                     if (Model.PageInfo.PageNumber == i)
+                     {
+                        <a class="btn btn-primary" asp-controller="Product" asp-action="ProductsByCategory" asp-route-categoryId="@Model.PageInfo.CategoryId" asp-route-page="@i">@i</a>
+                     }
+                     else
+                     {
+                        <a class="btn btn-default" asp-controller="Product" asp-action="ProductsByCategory" asp-route-categoryId="@Model.PageInfo.CategoryId" asp-route-page="@i">@i</a>
+                     }
+                  }
+                  else
+                  {
+                     if (Model.PageInfo.PageNumber == i)
+                     {
+                        <a class="btn btn-primary " asp-controller="Product" asp-action="Products" asp-route-page="@i">@i</a>
 
+                     }
+                     else
+                     {
+                        <a class="btn btn-default" asp-controller="Product" asp-action="Products" asp-route-page="@i">@i</a>
+                     }
+                  }
                }
-            }
 
+            </div>
          </div>
+
       </div>
 
    </div>
-
 </div>
