--- a/CompassSite/Views/Account/Register.cshtml
+++ b/CompassSite/Views/Account/Register.cshtml
@@ -6,6 +6,11 @@
    <form class="border p-5" asp-antiforgery="true" asp-action="Register" asp-controller="Account">
       <div class="validation" asp-validation-summary="ModelOnly"></div>
       <div class="mb-3">
+         <label asp-for="UserName"></label><br />
+         <input asp-for="UserName" />
+         <span asp-validation-for="UserName"></span>
+      </div>
+      <div class="mb-3">
          <label asp-for="Email"></label><br />
          <input asp-for="Email" />
          <span asp-validation-for="Email"></span>
