--- a/CompassSite/Views/Profile/Profile.cshtml
+++ b/CompassSite/Views/Profile/Profile.cshtml
@@ -12,11 +12,11 @@
       <div class="col-3 border d-flex justify-content-center text-center align-items-center">
          @if (string.IsNullOrEmpty(Model.AvatarUrl))
          {
-           <span class="text-size-20">Изображение отсутствует</span>
+         <span class="text-size-20">Изображение отсутствует</span>
          }
          else
          {
-            <img class="profile-img" src="@Url.Content(Model.AvatarUrl)" />
+         <img class="profile-img" src="@Url.Content(Model.AvatarUrl)" />
          }
       </div>
       <div class="col-4">
@@ -44,6 +44,15 @@
             </form>
          </div>
       </div>
+      @if (User.IsInRole("Admin"))
+      {
+      <div class="col-3">
+         <div class="border p-5 d-flex justify-content-center flex-column text-center">
+            <h5>Админ панель</h5>
+            <a class="btn btn-dark" asp-controller="Admin" asp-action="AdminPanel">Войти</a>
+         </div>
+      </div>
+      }
    </div>
 </div>
 @section scripts{
